White_belt_approx/.metadata/.plugins/org.eclipse.cdt.ui/names 2 2.build.log
19:11:37 **** Incremental Build of configuration Debug for project names 2 2 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\names 2 2.o" "..\\src\\names 2 2.cpp" 
..\src\names 2 2.cpp:7:1: error: 'string' does not name a type; did you mean 'stdin'?
 string FindNameByYear(const map<int, string>& names, int year) {
 ^~~~~~
 stdin
..\src\names 2 2.cpp:26:40: error: 'string' does not name a type; did you mean 'stdin'?
   void ChangeFirstName(int year, const string& first_name) {
                                        ^~~~~~
                                        stdin
..\src\names 2 2.cpp:29:39: error: 'string' does not name a type; did you mean 'stdin'?
   void ChangeLastName(int year, const string& last_name) {
                                       ^~~~~~
                                       stdin
..\src\names 2 2.cpp:32:3: error: 'string' does not name a type; did you mean 'stdin'?
   string GetFullName(int year) {
   ^~~~~~
   stdin
..\src\names 2 2.cpp:56:3: error: 'map' does not name a type
   map<int, string> first_names;
   ^~~
..\src\names 2 2.cpp:57:3: error: 'map' does not name a type
   map<int, string> last_names;
   ^~~
..\src\names 2 2.cpp: In member function 'void Person::ChangeFirstName(int, const int&)':
..\src\names 2 2.cpp:27:5: error: 'first_names' was not declared in this scope
     first_names[year] = first_name;
     ^~~~~~~~~~~
..\src\names 2 2.cpp:27:5: note: suggested alternative: 'first_name'
     first_names[year] = first_name;
     ^~~~~~~~~~~
     first_name
..\src\names 2 2.cpp: In member function 'void Person::ChangeLastName(int, const int&)':
..\src\names 2 2.cpp:30:5: error: 'last_names' was not declared in this scope
     last_names[year] = last_name;
     ^~~~~~~~~~
..\src\names 2 2.cpp:30:5: note: suggested alternative: 'last_name'
     last_names[year] = last_name;
     ^~~~~~~~~~
     last_name

19:11:38 Build Finished (took 778ms)

